--- a/base/snippets/navigation.scss
+++ b/base/snippets/navigation.scss
@@ -79,7 +79,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
     .nav__menu--depth-1 {
         display: none;
 
-        @include at-breakpoint($medium) {
+        @include at-breakpoint($above-medium) {
             display: block !important;
             background-color: transparent;
         }
@@ -90,7 +90,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
 
             //DROPDOWN (on-hover)
             &:hover .nav__menu--depth-2 { //display the dropdown (level-2) on hover
-                @include at-breakpoint($medium) {
+                @include at-breakpoint($above-medium) {
                     position: relative; //Pushes down the other nav links when dropdown is open
                     left: 0;            //Bring back on-screen when needed
                 }
@@ -106,7 +106,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
     .nav__menu--depth-2 {   //level-2 unordered list (ul) element
         display: none;
 
-        @include at-breakpoint($medium) {
+        @include at-breakpoint($above-medium) {
             position: absolute; //position so subnav does not interfere with the document flow and sits over top.
             left:-9999px;       //Hide off-screen when not needed (this is more accessible than display:none;)
             display: block !important;
@@ -130,7 +130,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
     }
 
     //BREAKPOINTS
-    @include at-breakpoint($medium) {
+    @include at-breakpoint($above-medium) {
         .nav__menu--depth-1 > .nav__item { //Select level-1 unordered list direct-child (li) elements.
             float: left;     //stacks the links in a horizontal line.
 
@@ -221,7 +221,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
     //DIVIDER
     //valid $divider-style values: none (default) | left | right | inside | outside
     @if $divider-style != false and $divider-style != none {
-        @include at-breakpoint($medium) {
+        @include at-breakpoint($above-medium) {
             @if $divider-style == inside or $divider-style == right or $divider-style == outside {
                 .nav__menu--depth-1 > .nav__item > .nav__link { //Select level-1 direct-child (a) anchor elements.
                     border-right: 1px solid $divider-color; //add border to visually divide the links
@@ -259,7 +259,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
     .nav__menu--depth-2 {
         //BORDER RADIUS
         @if $border-radius != false {
-            @include at-breakpoint($medium) {
+            @include at-breakpoint($above-medium) {
                 @include border-radius($border-radius); //add border radius
 
                 > .nav__item:first-child .nav__link {
@@ -275,7 +275,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
 
         //DROPDOWN BORDER
         @if $border-color != false {
-            @include at-breakpoint($medium) {
+            @include at-breakpoint($above-medium) {
                 border: 1px solid $border-color;
                 margin-left: -1px;
             }
@@ -283,7 +283,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
 
         //DROPDOWN PADDING
         @if $padding-color != false {
-            @include at-breakpoint($medium) {
+            @include at-breakpoint($above-medium) {
                 padding: $padding-width;
                 background-color: $padding-color;
             }
@@ -316,7 +316,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
             //"inside", top" & "bottom" only divides links if border or padding is set. "outside" always draws borders
             @if $divider-color != false and $divider-style == top {
                 @if $border-color != false or $padding-color != false {
-                    @include at-breakpoint($medium) {
+                    @include at-breakpoint($above-medium) {
                         &:first-child .nav__link {
                             border-top: 0 none;
                         }
@@ -328,7 +328,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
                 }
             } @else if $divider-color != false and $divider-style == bottom {
                 @if $border-color != false or $padding-color != false {
-                    @include at-breakpoint($medium) {
+                    @include at-breakpoint($above-medium) {
                         &:last-child .nav__link {
                             border-bottom: 0 none;
                         }
@@ -373,7 +373,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
                 @include transition($property $duration $ease, left 0s linear $duration);
             }
         } @else {
-            @include at-breakpoint($medium) {
+            @include at-breakpoint($above-medium) {
                 .nav__menu--depth-1 > .nav__item {
                     &:hover .nav__menu--depth-2 {
                         @if $to != false {
@@ -413,7 +413,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
                 @include transition($property $duration $ease, $property-2 $duration-2 $ease-2, left 0s linear $duration);
             }
         } @else {
-            @include at-breakpoint($medium) {
+            @include at-breakpoint($above-medium) {
                 .nav__menu--depth-1 > .nav__item {
                     &:hover .nav__menu--depth-2 {
                         @if $to != false {
@@ -466,7 +466,7 @@ $nav__z-index_bottom: 200;  //level-1 nav items
         }
     }
     @if $animate == true {
-        @include at-breakpoint($medium) {
+        @include at-breakpoint($above-medium) {
             .nav__menu--depth-1 > .nav__item--parent:hover:after {
                 margin-top: $height * 0.5;
                 // color: $hover-color; //moved below
