added keyframe animation mixins

--- a/screen.scss
+++ b/screen.scss
@@ -12,6 +12,7 @@
 @import "base/variables",
         "base/fonts",
         "base/snippets/common",
+        "base/snippets/animation",
         "base/snippets/navigation",
         "base/snippets/article",
         "base/snippets/sequence",
