--- a/base/tags.scss
+++ b/base/tags.scss
@@ -8,11 +8,12 @@
 
 body, html {
     width: 100%;
-    margin: 0;
-    padding: 0;
     font-family: $body-font;
     -webkit-font-smoothing: antialiased;
 }
+
+//establish vertical rhythm
+@include establish-baseline;
 
 // ensures initial or successive headings will not be spaced too heavily apart
 %heading-group {
