--- a/screen-modern.scss
+++ b/screen-modern.scss
@@ -20,8 +20,7 @@ $experimental-support-for-opera : false;
 
 // import css frameworks
 @import "compass",
-        "susy",
-        "compass/reset";
+        "susy";
 
 // import styles
 @import "screen";
