--- a/base/variables.scss
+++ b/base/variables.scss
@@ -89,3 +89,6 @@ $border-radius: 0.4em;
 
 // neccessary for custom gradient mixins to work - sets start position of gradients globally
 $gradient-startpoint: top;
+
+//debug grids
+$debug-grids: false;
