--- a/base/snippets/article.scss
+++ b/base/snippets/article.scss
@@ -1,7 +1,16 @@
 // XMod Article Plugin - Layout
 // sets up very, very basic layout and text overflow for article modules
 // it is recommended to extend .xmod-article-tile with a .xsb-grid-... class to complement this mixin
-@mixin article-tiles($heading-height: 2.4em, $image-height: 7em, $description-height: 6.2em, $footer-height: 2.2em, $article-bg: #fff, $article-footer-bg: #ccc, $description-overflow: ellipsis, $date: false, $tag-label: false) {
+@mixin article-tiles(
+    $heading-height: 2.4em,
+    $image-ratio: 100%,
+    $description-height: 6.2em,
+    $footer-height: 2.2em,
+    $article-bg: #fff,
+    $article-footer-bg: #ccc,
+    $description-overflow: ellipsis,
+    $date: false, $tag-label: false) {
+
     .xmod-articles {
         @include transition(opacity 0.4s ease);
     }
@@ -21,34 +30,18 @@
     .xmod-article-tile__image {
         overflow: hidden;
         width: 100%;
-        height: $image-height;
         @include transition(height 0.2s ease);  //animate height at each breakpoint change
-
-        @include at-breakpoint($small-cols 480 / 16 * 1em) { max-height: 480/490 * $image-height; }
-        @include at-breakpoint($small-cols 470 / 16 * 1em) { max-height: 470/490 * $image-height; }
-        @include at-breakpoint($small-cols 460 / 16 * 1em) { max-height: 460/490 * $image-height; }
-        @include at-breakpoint($small-cols 450 / 16 * 1em) { max-height: 450/490 * $image-height; }
-        @include at-breakpoint($small-cols 440 / 16 * 1em) { max-height: 440/490 * $image-height; }
-        @include at-breakpoint($small-cols 430 / 16 * 1em) { max-height: 430/490 * $image-height; }
-        @include at-breakpoint($small-cols 420 / 16 * 1em) { max-height: 420/490 * $image-height; }
-        @include at-breakpoint($small-cols 410 / 16 * 1em) { max-height: 410/490 * $image-height; }
-        @include at-breakpoint($small-cols 400 / 16 * 1em) { max-height: 400/490 * $image-height; }
-        @include at-breakpoint($small-cols 390 / 16 * 1em) { max-height: 390/490 * $image-height; }
-        @include at-breakpoint($small-cols 380 / 16 * 1em) { max-height: 380/490 * $image-height; }
-        @include at-breakpoint($small-cols 370 / 16 * 1em) { max-height: 370/490 * $image-height; }
-        @include at-breakpoint($small-cols 360 / 16 * 1em) { max-height: 360/490 * $image-height; }
-        @include at-breakpoint($small-cols 350 / 16 * 1em) { max-height: 350/490 * $image-height; }
-        @include at-breakpoint($small-cols 340 / 16 * 1em) { max-height: 340/490 * $image-height; }
-        @include at-breakpoint($small-cols 330 / 16 * 1em) { max-height: 330/490 * $image-height; }
-        @include at-breakpoint($small-cols 320 / 16 * 1em) { max-height: 320/490 * $image-height; }
 
         a {
             display: block;
+            padding-top: $image-ratio;
         }
 
         img {
             max-width: 100%;
             height: auto;
+            position: absolute;
+            top: 0;
         }
     }
 
